// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Transactions/List matches snapshot 1`] = `
Array [
  <div
    className="makeStyles-root"
    id="Box"
  >
    <div
      className="makeStyles-list"
      formatUi={[Function]}
      hasNextPage={true}
      id="TransactionsList"
      isItemLoaded={[Function]}
      isNextPageLoading={false}
      itemCount={2}
      items={
        Array [
          Object {
            "block": <Link
              href="/blocks/1177924"
              passHref={true}
            >
              <WithStyles(ForwardRef(Typography))
                className="value"
                component="a"
                variant="body1"
              >
                1,177,924
              </WithStyles(ForwardRef(Typography))>
            </Link>,
            "hash": <Link
              href="/transactions/1E9232E8F8D450B32367698AB9DFD814A4570A3C95B4309B8E1D4B9D9F3629CB"
              passHref={true}
            >
              <WithStyles(ForwardRef(Typography))
                className="value"
                component="a"
                variant="body1"
              >
                1E9232E8F8D45...9D9F3629CB
              </WithStyles(ForwardRef(Typography))>
            </Link>,
            "messages": "1",
            "result": <UNDEFINED
              success={true}
            />,
            "time": "6 days ago",
          },
        ]
      }
      loadMoreItems={[Function]}
      loadNextPage={[Function]}
      rawDataTotal={1926}
    />
  </div>,
  ",",
]
`;

exports[`screen: Transactions/List matches snapshot 2`] = `
Array [
  <div
    className="makeStyles-root"
    id="Box"
  >
    <div
      className="makeStyles-list"
      formatUi={[Function]}
      hasNextPage={true}
      id="TransactionsList"
      isItemLoaded={[Function]}
      isNextPageLoading={false}
      itemCount={3}
      items={
        Array [
          Object {
            "block": <Link
              href="/blocks/1177925"
              passHref={true}
            >
              <WithStyles(ForwardRef(Typography))
                className="value"
                component="a"
                variant="body1"
              >
                1,177,925
              </WithStyles(ForwardRef(Typography))>
            </Link>,
            "hash": <Link
              href="/transactions/1E9232E8F8D450B32367698AB9DFD814A4570A3C95B4309B8E1D4B9D9F3629CB"
              passHref={true}
            >
              <WithStyles(ForwardRef(Typography))
                className="value"
                component="a"
                variant="body1"
              >
                1E9232E8F8D45...9D9F3629CB
              </WithStyles(ForwardRef(Typography))>
            </Link>,
            "messages": "1",
            "result": <UNDEFINED
              success={false}
            />,
            "time": "6 days ago",
          },
          Object {
            "block": <Link
              href="/blocks/1177924"
              passHref={true}
            >
              <WithStyles(ForwardRef(Typography))
                className="value"
                component="a"
                variant="body1"
              >
                1,177,924
              </WithStyles(ForwardRef(Typography))>
            </Link>,
            "hash": <Link
              href="/transactions/1E9232E8F8D450B32367698AB9DFD814A4570A3C95B4309B8E1D4B9D9F3629CB"
              passHref={true}
            >
              <WithStyles(ForwardRef(Typography))
                className="value"
                component="a"
                variant="body1"
              >
                1E9232E8F8D45...9D9F3629CB
              </WithStyles(ForwardRef(Typography))>
            </Link>,
            "messages": "1",
            "result": <UNDEFINED
              success={true}
            />,
            "time": "6 days ago",
          },
        ]
      }
      loadMoreItems={[Function]}
      loadNextPage={[Function]}
      rawDataTotal={1926}
    />
  </div>,
  ",",
]
`;
